# Set source files
set(WWLIB_SRC
    _convert.cpp
    _mono.cpp
    argv.cpp
    b64pipe.cpp
    b64straw.cpp
    base64.cpp
    blit.cpp
    blowfish.cpp
    buff.cpp
    bufffile.cpp
    chunkio.cpp
    convert.cpp
    cpudetect.cpp
    crc.cpp
    cstraw.cpp
    data.cpp
    ddraw.cpp
    dsurface.cpp
    Except.cpp
    FastAllocator.cpp
    ffactory.cpp
    gcd_lcm.cpp
    hash.cpp
    hsv.cpp
    ini.cpp
    int.cpp
    jshell.cpp
    keyboard.cpp
    LaunchWeb.cpp
    lcw.cpp
    load.cpp
    mixfile.cpp
    mono.cpp
    mpmath.cpp
    mpu.cpp
    msgloop.cpp
    multilist.cpp
    mutex.cpp
    nstrdup.cpp
    palette.cpp
    pcx.cpp
    pipe.cpp
    pk.cpp
    ramfile.cpp
    random.cpp
    rawfile.cpp
    rc4.cpp
    rcfile.cpp
    readline.cpp
    realcrc.cpp
    refcount.cpp
    registry.cpp
    rgb.cpp
    rle.cpp
    rndstrng.cpp
    sampler.cpp
    sha.cpp
    slnode.cpp
    srandom.cpp
    stimer.cpp
    straw.cpp
    strtok_r.cpp
    systimer.cpp
    tagblock.cpp
    TARGA.CPP
    textfile.cpp
    tgatodxt.cpp
    thread.cpp
    trim.cpp
    vector.cpp
    verchk.cpp
    widestring.cpp
    win.cpp
    WWCOMUtil.cpp
    wwfile.cpp
    wwfont.cpp
    wwstring.cpp
    xpipe.cpp
    xstraw.cpp
    xsurface.cpp
)

# Targets to build.
add_library(wwlib STATIC)

target_link_libraries(wwlib PRIVATE
    wwcommon
)

target_sources(wwlib PRIVATE ${WWLIB_SRC})
